Donde aprender de seguridad.

--- a/index.html
+++ b/index.html
@@ -180,6 +180,24 @@
 						</ul>
 					</section>
 				</section>
+				
+				<section>
+				    <section>
+					<h2>Donde aprender Seguridad?</h2>
+				    </section>
+				    
+				    <section>
+					<ul>
+					    <li>Leer libros</li>
+					    <li>Leer Noticias de Seguridad</li>
+					    <li>Suscribirse a listas de correo</li>
+					    <li>Asistir a conferencias</li>
+					    <li>Participar en la comunidad</li>
+					    <li>Colaborar</li>
+					    <li>Reproducir fallos en entornos controlados</li>
+					</ul>
+				    </section>
+				</section>
 
 				<section>
 					<h2>Point of View</h2>
