Presentación final Seguridad Web - FLISoL 2015

--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
 						<h2>A3 Cross-Site Scripting (XSS)</h2>
 						<p>Ocurre cuando existe validación pobre de la información ingresada por el atacante.</p>
 						<ul>
-						    <li>phishing</li>
-						    <li>robo de credenciales</li>
-						    <li>ejecucion de acciones automaticas</li>
+						    <li>Phishing</li>
+						    <li>Robo de Credenciales</li>
+						    <li>Ejecucion de acciones automaticas</li>
 						</ul>
 
 						<pre class="fragment"><code data-trim contenteditable>
@@ -259,7 +259,9 @@
 				<section>
 					<section>
 						<h2>A1 Injection</h2>
+						<img src="img/owasp_injection.jpg" width="512px" />
 					</section>
+					
 					<section data-background="#8c4738" class="letras">
 						<p><b>Inyección SQL</b> es un método de infiltración de código intruso que se vale de una vulnerabilidad informática presente en una aplicación en el nivel de validación de las entradas para realizar consultas a una base de datos.</p>
 						<p>El origen de la vulnerabilidad radica en el incorrecto chequeo y/o filtrado de las variables utilizadas en un programa que contiene, o bien genera, código SQL. Es, de hecho, un error de una clase más general de vulnerabilidades que puede ocurrir en cualquier lenguaje de programación o script que esté embebido dentro de otro.</p>
